--- a/2.4 Movie Ranking Project/solution.html
+++ b/2.4 Movie Ranking Project/solution.html
@@ -1,37 +1,57 @@
 <!-- Scroll down for a sample solution -->
+< <!DOCTYPE html>
+    <html lang="en">
 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="Description" content="Enter your description here" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Title</title>
+    </head>
 
+    <body>
+        <h1>The Best Movies According to Angela</h1>
+        <h2>My top 3 movies of all-time.</h2>
+        <hr />
+        <h3>Spirited Away</h3>
+        <p>This is my favourite anime. I love the beautiful images.</p>
+        <h3>Ex Machina</h3>
+        <p>Really cool sci-fi movie.</p>
+        <h3>Drive</h3>
+        <p>Super beautiful film. Really artistic.</p>
+        <ul>
+            <li>A</li>
+            <li>B
+                <ol>
+                    <li>B1</li>
+                    <li>B2
+                        <ul>
+                            <li>B2a
+                                <ul>
+                                    <li>B2aa</li>
+                                    <li>B2aa</li>
+                                </ul>
+                            </li>
+                            <li>B2b</li>
+                            <li>B2c</li>
+                        </ul>
+                    </li>
+                    <li>B3
+                        <ol>
+                            <li>B31</li>
+                            <li>B32</li>
+                        </ol>
+                    </li>
+                </ol>
+            </li>
+            <li>C</li>
+        </ul>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </body>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+    </html>
