change to a numbered list strating from 3

--- a/3.4 Birthday Invite Project/index.html
+++ b/3.4 Birthday Invite Project/index.html
@@ -17,16 +17,16 @@
         <h2>On the 11th of December</h2>
         <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="a colorful bithday cake">
         <h3>What to bring:</h3>
-        <ul>
+        <ol start="3">
             <li>Hiking shoes</li>
             <li>Swim suit</li>
             <li>Extra pair of clothes to change</li>
-        </ul>
+        </ol>
 
         <h3>This is where you need to go:</h3>
-        <p>Let us all meet at this at
-            <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,90y,286.61h,89.59t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656?entry=ttu">google map link.</a>
-        </p>
+        <p>Let us all meet at this location
+            <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,90y,286.61h,89.59t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656?entry=ttu">google map link</a> before going to the destination. The destination location
+            is below.</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57920.97146205089!2d30.836018783274206!3d-24.861775801753502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ec2611b1f8a85f5%3A0x7c147a09607c1a62!2sLisbon%20Falls!5e0!3m2!1sen!2sie!4v1690248141252!5m2!1sen!2sie"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
