--- a/4.1+Webpages/4.1 Webpages/public/contact.html
+++ b/4.1+Webpages/4.1 Webpages/public/contact.html
@@ -1,4 +1,3 @@
-<!-- Write your code below -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,19 +9,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>The Best Must Watch!</title>
+    <title>Title</title>
 </head>
 
 <body>
-    <h1>The Series According to My Rating</h1>
-    <h2>My Top 3 Series</h2>
-    <hr>
-    <h3>Wednesday</h3>
-    <p>It is based on the most well known cartoons "The Adams"</p>
-    <h3>1899</h3>
-    <p>Mind bogglin!</p>
-    <h3>Bridgerton</h3>
-    <p>Interesting stories about each member of the monach.</p>
+    <h1>Contact Me</h1>
+    <p>Tel: +353 (0) 830-2028-30</p>
+    <p>Github:
+        <a href="https://github.com/Cy-2-30">Click the link</a>
+    </p>
+    <p>Address:</p>
+    <p>
+        Dublin 3<br /> Dublin City
+        <br /> Leinster
+        <br/>Ireland <br />
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
