--- a/6.0 CSS Colors/index.html
+++ b/6.0 CSS Colors/index.html
@@ -17,10 +17,12 @@
         }
         
         h1 {
+            color: whitesmoke;
             background-color: darkseagreen;
         }
         
         h2 {
+            color: #faf8f1;
             background-color: #C58940;
         }
     </style>
